--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 nav{
-    width:100%
+    width:100%;
     height: 100px;
 }
 
@@ -16,7 +16,7 @@ ul li {
     display: block;
     list-style: none;
     display: inline-block;
-    float: left;
+   
     line-height: 100px;
 }
 
@@ -32,7 +32,7 @@ ul li {
     display: block;
     list-style: none;
     display: inline-block;
-    float: left;
+    
     line-height: 100px;
 }
 
@@ -40,6 +40,4 @@ ul li a:hover {
     
     color:rgb(0, 148, 247);
     
-
 }
-
